# synthesizer

./: .gitignore  Cargo.toml  README.md  build.toml  roxfile.yml  synth.toml  synthesizer.code-workspace  synthesizer.sqlite  synthesizer.yaml
.github/workflows/: general.yml
.sqlx/: query-1806eed06c7c88d5eaa9720f2c22443760cd945e00aa49f4eb9866fb68ed6204.json  query-5e245d8a7c732e93d112137726e7b0241799dca6b8640911db515338b15bfc7b.json  query-81a473988b7ac31e93bd1831af553ec604c4b199ce5ae5b896a2e18d0aff810f.json  query-962610002ca8baab7b5d5e3e722dba23d4822aff9c9c3e528985631027b19c55.json  query-c2316df2df906de3625f058bf57af93f44b720d3c0f1472db4063c226efc74f2.json  query-cc668968b40892d06ce169749383019f494a641ecb6a7ac983457c0aa99e62c7.json
crates/synth_api/: Cargo.toml
crates/synth_api/src/: endpoints.rs  lib.rs  main.rs  models.rs  pipeline_endpoints.rs  task_endpoints.rs  task_instance_endpoints.rs  webserver.rs
crates/synth_api/src/api/: mod.rs  pipelines.rs  task_instances.rs  tasks.rs  utility.rs
crates/synth_api/src/endpoints/: mod.rs  pipelines.rs  tasks.rs
crates/synth_api/src/views/: mod.rs  pipelines.rs  task_instances.rs  tasks.rs
crates/synth_api/templates/: base.html  index.html
crates/synth_api/templates/pipelines/: index.html
crates/synth_api/templates/task_instances/: index.html
crates/synth_api/templates/tasks/: index.html
crates/synth_api/tests/: api.rs  helpers.rs  pipelines.rs  tasks.rs
crates/synth_cli/: Cargo.toml
crates/synth_cli/src/: commands.rs  entrypoint.rs  lib.rs  main.rs  manifests.rs  models.rs  register.rs  utils.rs
crates/synth_cli/tests/: manifests.rs
crates/synth_common/: Cargo.toml
crates/synth_common/src/: database.rs  lib.rs  models.rs  queries.rs  telemetry.rs
crates/synth_common/src/migrations/: 20231116141128_init_migration.sql
crates/synth_scheduler/: Cargo.toml
crates/synth_scheduler/src/: lib.rs  main.rs  scheduler.rs
data/: pipelines.yaml  synth_manifest.yml
src/: cli.rs  commands.rs  config.rs  database.rs  lib.rs  main.rs  manifests.rs  models.rs  scheduler.rs  utils.rs  webserver.rs
src/api/: endpoints.rs  mod.rs  models.rs  task_endpoints.rs  task_instance_endpoints.rs  webserver.rs
src/cli/: commands.rs  entrypoint.rs  main.rs  manifests.rs
src/common/: database.rs  mod.rs  models.rs
src/migrations/: 20231116141128_init_migration.sql
src/scheduler/: scheduler.rs
src/server/: database.rs  main.rs  mod.rs  models.rs  pipeline_endpoints.rs  scheduler.rs  webserver.rs
tests/: api.rs  common.rs  manifests.rs
tests/api/: api.rs  helpers.rs  main.rs  pipelines.rs  tasks.rs
tests/cli/: main.rs  manifests.rs
