[package]
name = "synthesizer"
description = "Compose and Manage Data Pipelines"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
anyhow = "1.0.71"
askama = "0.12.0"
clap = { version = "4.4.4", features = ["string", "cargo"] }
cron-parser = "0.8.1"
dotenvy = "0.15.7"
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
serde_yaml = "0.9.25"
sqlx = { version = "0.7.1", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.31.0", features = ["full"] }
toml = "0.8.8"
uuid = { version = "1.5.0", features = ["v4", "fast-rng", "macro-diagnostics"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
