[package]
name = "synth_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
anyhow = "1.0.71"
config = { version = "0.13.4", features = ["toml"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
sqlx = { version = "0.7.1", features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "uuid",
    "chrono",
    "migrate",
] }
tokio = { version = "1.31.0", features = ["full"] }
tracing = { version = "0.1.40", features = ["log", "attributes"] }
tracing-log = "0.2.0"
tracing-actix-web = "0.7"
tracing-subscriber = { version = "0.3.18", features = [
    "std",
    "fmt",
    "json",
    "env-filter",
    "registry",
] }
uuid = { version = "1.6.1", features = ["v4"] }
synth_common = { path = "../synth_common" }
askama = { version = "0.12.1" }

[profile.dev.package.askama_derive]
# This speeds up incremental builds
opt-level = 3

[dev-dependencies]
pretty_assertions = "1.4.0"
reqwest = { version = "0.11.6", features = ["json"] }
