[package]
name = "synth_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.4.4", features = ["string", "cargo"] }
config = { version = "0.13.4", features = ["toml"] }
reqwest = { version = "0.11.22", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
serde_yaml = "0.9.25"
sqlx = { version = "0.7.1", features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "uuid",
    "chrono",
    "migrate",
] }
tokio = { version = "1.31.0", features = ["full"] }
uuid = { version = "1.6.1", features = ["v4"] }
synth_common = { path = "../synth_common" }

[dev-dependencies]
pretty_assertions = "1.4.0"
