[package]
name = "synth_scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
config = { version = "0.13.4", features = ["toml"] }
cron-parser = "0.8.1"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
sqlx = { version = "0.7.1", features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "uuid",
    "chrono",
    "migrate",
] }
tokio = { version = "1.31.0", features = ["full"] }
tracing = { version = "0.1.40", features = ["log", "attributes"] }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
    "std",
    "fmt",
    "json",
    "env-filter",
    "registry",
] }
uuid = { version = "1.6.1", features = ["v4"] }
chrono = "0.4.31"
synth_common = { path = "../synth_common" }
